# AK_lab2

./: CMakeLists.txt  main.cpp
